Arreglando el to.list